# minimal-poetry

./: pyproject.toml
