[tool.poetry]
name = "minimal-poetry"
version = "0.1.0"
description = ""
authors = ["Sonny Valkeneers <sonny.valkeneers@infrabel.be>"]
readme = "README.md"
packages = [{include = "minimal_poetry"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
